<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Home screen -->
    <string name="category_type_popular">Popular meals</string>
    <string name="category_type_all_categories">Category meals</string>
    <string name="category_type_recommended">Recommended meals</string>
    <string name="category_type_areas">Areas</string>

    <!-- Favorites-->
    <string name="favorites_screen_title">Favorite meals</string>
    <string name="favorites_screen_placeholder">Your favorite recipes will appear here</string>

    <!-- Category details -->
    <string name="category_details_description_header">Category details</string>

    <!-- Meal details -->
    <string name="meal_details_youtube_text">Watch on YouTube</string>
    <string name="meal_details_category_type">Category -</string>
    <string name="meal_details_area_type">Origin -</string>
    <string name="meal_details_ingredients_label">Ingredients:</string>
    <string name="meal_details_directions_label">Instructions:</string>

    <!-- Expanding text -->
    <string name="see_more">SEE MORE</string>
    <string name="see_less">SEE LESS</string>

    <!-- Content description -->
    <string name="cd_popular_meals">Popular meals list</string>
    <string name="cd_all_categories">All meals categories list</string>
    <string name="cd_recommended_meals">Recommended meals list</string>
    <string name="cd_meal_details">Meal details</string>
    <string name="cd_category_details">Category details</string>

    <string name="cd_navigate_up">Navigate up</string>
    <string name="cd_category_backdrop">Backdrop image</string>
    <string name="cd_youtube_button">Youtube button</string>
    <string name="cd_favorites_button">Favorites button</string>
</resources>