<resources>
    <string name="app_name">Cookery</string>

    <!-- Home Tabs -->
    <string name="home_categories">Home</string>
    <string name="home_search">Search</string>
    <string name="home_favorites">Favorites</string>
    <string name="home_random">Random</string>
</resources>